# abc_collection

./: .gitignore  Makefile  godrestye-in-c.abc  godrestye.abc  godrestye.mid  music.py  pyproject.toml  transpose.py  transpose.sh
abc/: auldlangsyne.abc  godrestye.abc  greensleeves.abc  scarborough.abc
