[project]
name = "abc"
version = "0.1.0"
description = ""
authors = [
    {name = "ffettes",email = "fergusfettes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.16.0,<0.17.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
music = "abc.music:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
